2006-11-25 Yen-Ju Chen <yjchenx at gmail>

	* Use syntax definition for comment.
	* Use syntax definition for string.
	* Use syntax definition for keyword.
	* Fix minor render problem.

2006-11-24 Yen-Ju Chen <yjchenx at gmail>

	* Add syntax highlighting from CodeEditor which still works.
        * Add syntax definitions from Smultron.
	* Only tested on Cocoa so far.

2006-11-23 Yen-Ju Chen <yjchenx at gmail>

	* Initial import.
